--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,9 @@
     <string name="description_post_menu">Post menu</string>
     <string name="description_favorite">Favorite</string>
     <string name="description_send">Send</string>
+    <string name="remove">Remove</string>
+    <string name="content">Content</string>
+    <string name="empty_text">Text is blank!</string>
+    <string name="edit">edit</string>
 
 </resources>
