--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -10,4 +10,5 @@
     <string name="empty_text">Пустой текст</string>
     <string name="edit">Редактировать</string>
     <string name="view">Просмотры</string>
+    <string name="apps_not_found">Приложения не найдены</string>
 </resources>
