--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,7 @@
     <string name="apps_not_found">Apps not found</string>
     <string name="add_post">add_post</string>
     <string name="play">Play</string>
+    <string name="save">Save</string>
+    <string name="cansel">cansel</string>
 
 </resources>
