--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,5 +19,8 @@
     <string name="channel_remote_description">channel_remote_description</string>
     <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
     <string name="notification_user_newPost">User %1$s published new post: %2$s</string>
+    <string name="no_post">No Post</string>
+    <string name="Network_error">Network error</string>
+    <string name="retry">retry</string>
 
 </resources>
